# python-comport

./: .gitignore  README.md  pyproject.toml  python-comport.py
python_comport/: __init__.py  __main__.py
